agregando estilo al header

--- a/index.html
+++ b/index.html
@@ -4,19 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/principal.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <title>Tornillos Bautista</title>
 </head>
 <body>
-    <header>
+    <header class=content-fluid>
         <h1>Logo</h1>
-        <nav>
-            <ol>
-                <li>MISIÓN</li>
-                <li>VISIÓN</li>
-                <li>CATÁLOGO</li>
-                <li>COTIZACIÓN</li>
-            </ol>
-        </nav>
+        <nav class="navbar navbar-expand-lg navbar-dark">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item active ">
+                  <a class="nav-link" href="#">MISIÓN <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">VISIÓN</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">CATÁLOGO</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">COTIZACIÓN</a>
+                  </li>
+              </ul>
+            </div>
+          </nav>
+
     
         <h1>PRODUCTOS DE LA MEJOR CALIDAD</h1>
     </header>
@@ -47,6 +63,12 @@
                     <img src="" alt="imagen">
                 </div>
                 <div><!--Parte derecha-->
+                    <div>
+                        <img src="" alt="imagen tornillo">
+                        <h2>Hexagonal</h2>
+                        <p>Descripcion</p>
+                    </div>
+
 
                 </div>
             </div>
