creando estilo tarjeta

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 
     </header>
     <h1>PRODUCTOS DE LA MEJOR CALIDAD</h1>
+    <p>Mayores proovedores de tornilleria y herramienta</p>
 
         <div id="carrusel-control" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
@@ -62,18 +63,18 @@
 
     
 
-<main class="seccion-catalogo">
+<main>
     <article>
-        <section>
-            <div><!--Parte de arriba-->
-                <div>
-                    <h2>Tornilleria</h2>
+        <section class="seccion-catalogo">
+            <div class="catalogo-parte-arriba"><!--Parte de arriba-->
+                <div class="titulo-catalogo">
+                    <h5>Tornilleria</h5>
                 </div>
-                <div>
-                    <h2>Galvanizada G2</h2>
+                <div class="subtitulo-catalogo">
+                    <h5>Galvanizada G2</h5>
                 </div>
             </div>
-            <div><!--Parte de abajo-->
+            <div class="catalogo-parte-abajo"><!--Parte de abajo-->
                 <div><!--Parte de izquierda-->
                     <p>
                         Tornilleria en acero de bajo o medio carbono zincado, usado para ensanblkar....
@@ -92,12 +93,8 @@
                         <h2>Hexagonal</h2>
                         <p>Descripcion</p>
                     </div>
-
-
                 </div>
             </div>
-
-
         </section>
     </article>
 
