--- a/index.html
+++ b/index.html
@@ -64,38 +64,14 @@
     
 
 <main>
+
     <article>
-        <section class="seccion-catalogo">
-            <div class="catalogo-parte-arriba"><!--Parte de arriba-->
-                <div class="titulo-catalogo">
-                    <h5>Tornilleria</h5>
-                </div>
-                <div class="subtitulo-catalogo">
-                    <h5>Galvanizada G2</h5>
-                </div>
-            </div>
-            <div class="catalogo-parte-abajo"><!--Parte de abajo-->
-                <div><!--Parte de izquierda-->
-                    <p>
-                        Tornilleria en acero de bajo o medio carbono zincado, usado para ensanblkar....
-                    </p>
-                    <ol>
-                        <li>Estructuras metálicas</li>
-                        <li>Madera</li>
-                        <li>Carrocería</li>
-                        <li>Muebles</li>
-                    </ol>
-                    <img src="" alt="imagen">
-                </div>
-                <div><!--Parte derecha-->
-                    <div>
-                        <img src="" alt="imagen tornillo">
-                        <h2>Hexagonal</h2>
-                        <p>Descripcion</p>
-                    </div>
-                </div>
-            </div>
-        </section>
+      <section class="caja-catalogo">
+        <img src="" alt="Imagen">
+        <h2>Titulo</h2>
+        <button>Ver más</button>
+      </section>
+      
     </article>
 
 
