--- a/index.html
+++ b/index.html
@@ -65,11 +65,26 @@
 
 <main>
 
-    <article>
+    <article class="caja-articulos">
       <section class="caja-catalogo">
-        <img src="" alt="Imagen">
+        <img src="https://cdn1.totalcode.net/easy/product-zoom/es/tornillo-lamina-8-mm-x-3~4%22-avellanado-phillips-zincado-x12und-3.webp" width=60% alt="Imagen">
         <h2>Titulo</h2>
-        <button>Ver más</button>
+        <p>Descripcion del articulo</p>
+        <button class="boton-catalogo">Ver más</button>
+      </section>
+
+      <section class="caja-catalogo">
+        <img src="https://cdn1.totalcode.net/easy/product-zoom/es/tornillo-lamina-8-mm-x-3~4%22-avellanado-phillips-zincado-x12und-3.webp" width=60% alt="Imagen">
+        <h2>Titulo</h2>
+        <p>Descripcion del articulo</p>
+        <button class="boton-catalogo">Ver más</button>
+      </section>
+
+      <section class="caja-catalogo">
+        <img src="https://cdn1.totalcode.net/easy/product-zoom/es/tornillo-lamina-8-mm-x-3~4%22-avellanado-phillips-zincado-x12und-3.webp" width=60% alt="Imagen">
+        <h2>Titulo</h2>
+        <p>Descripcion del articulo</p>
+        <button class="boton-catalogo">Ver más</button>
       </section>
       
     </article>
