--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <h1>PRODUCTOS DE LA MEJOR CALIDAD</h1>
     <p>Mayores proovedores de tornilleria y herramienta</p>
 
-        <div id="carrusel-control" class="carousel slide" data-ride="carousel">
+        <div id="carrusel-control" class="carousel slide caja-carrusel" data-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img src="https://www.eltiempo.com/files/image_640_428/uploads/2021/02/26/60396c5e92e93.jpeg" class="d-block w-100" alt="...">
