--- a/index.html
+++ b/index.html
@@ -74,48 +74,141 @@
             <h3>...Distribuimos productos de las mejores marcas...</h3>
         </div>
         <div class="owl-carousel owl-theme">
-          <div class="item"><h4>1</h4></div>
-          <div class="item"><h4>2</h4></div>
-          <div class="item"><h4>3</h4></div>
-          <div class="item"><h4>4</h4></div>
-          <div class="item"><h4>5</h4></div>
-          <div class="item"><h4>6</h4></div>
-          <div class="item"><h4>7</h4></div>
-          <div class="item"><h4>8</h4></div>
-          <div class="item"><h4>9</h4></div>
-          <div class="item"><h4>10</h4></div>
-          <div class="item"><h4>11</h4></div>
-          <div class="item"><h4>12</h4></div>
-      </div>
+          <div class="item">
+            <section class="caja-catalogo">
+              <img
+                src="https://cdn1.totalcode.net/easy/product-zoom/es/tornillo-lamina-8-mm-x-3~4%22-avellanado-phillips-zincado-x12und-3.webp"
+                width=60% alt="Imagen">
+              <hr width="100%" size="3" noshade="noshade">
+              <h2>Titulo</h2>
+              <p>Descripcion del articulo</p>
+              <button class="boton-catalogo">Ver más</button>
+            </section>
+          </div>
+          <div class="item">
+            <section class="caja-catalogo">
+              <img
+                src="https://cdn1.totalcode.net/easy/product-zoom/es/tornillo-lamina-8-mm-x-3~4%22-avellanado-phillips-zincado-x12und-3.webp"
+                width=60% alt="Imagen">
+              <hr width="100%" size="3" noshade="noshade">
+              <h2>Titulo</h2>
+              <p>Descripcion del articulo</p>
+              <button class="boton-catalogo">Ver más</button>
+            </section>
+          </div>
+          <div class="item">
+            <section class="caja-catalogo">
+              <img
+                src="https://cdn1.totalcode.net/easy/product-zoom/es/tornillo-lamina-8-mm-x-3~4%22-avellanado-phillips-zincado-x12und-3.webp"
+                width=60% alt="Imagen">
+              <hr width="100%" size="3" noshade="noshade">
+              <h2>Titulo</h2>
+              <p>Descripcion del articulo</p>
+              <button class="boton-catalogo">Ver más</button>
+            </section>
+          </div>
+          <div class="item">
+            <section class="caja-catalogo">
+              <img
+                src="https://cdn1.totalcode.net/easy/product-zoom/es/tornillo-lamina-8-mm-x-3~4%22-avellanado-phillips-zincado-x12und-3.webp"
+                width=60% alt="Imagen">
+              <hr width="100%" size="3" noshade="noshade">
+              <h2>Titulo</h2>
+              <p>Descripcion del articulo</p>
+              <button class="boton-catalogo">Ver más</button>
+            </section>
+          </div>
+          <div class="item">
+            <section class="caja-catalogo">
+              <img
+                src="https://cdn1.totalcode.net/easy/product-zoom/es/tornillo-lamina-8-mm-x-3~4%22-avellanado-phillips-zincado-x12und-3.webp"
+                width=60% alt="Imagen">
+              <hr width="100%" size="3" noshade="noshade">
+              <h2>Titulo</h2>
+              <p>Descripcion del articulo</p>
+              <button class="boton-catalogo">Ver más</button>
+            </section>
+          </div>
+          <div class="item">
+            <section class="caja-catalogo">
+              <img
+                src="https://cdn1.totalcode.net/easy/product-zoom/es/tornillo-lamina-8-mm-x-3~4%22-avellanado-phillips-zincado-x12und-3.webp"
+                width=60% alt="Imagen">
+              <hr width="100%" size="3" noshade="noshade">
+              <h2>Titulo</h2>
+              <p>Descripcion del articulo</p>
+              <button class="boton-catalogo">Ver más</button>
+            </section>
+          </div>
+          <div class="item">
+            <section class="caja-catalogo">
+              <img
+                src="https://cdn1.totalcode.net/easy/product-zoom/es/tornillo-lamina-8-mm-x-3~4%22-avellanado-phillips-zincado-x12und-3.webp"
+                width=60% alt="Imagen">
+              <hr width="100%" size="3" noshade="noshade">
+              <h2>Titulo</h2>
+              <p>Descripcion del articulo</p>
+              <button class="boton-catalogo">Ver más</button>
+            </section>
+          </div>
+          <div class="item">
+            <section class="caja-catalogo">
+              <img
+                src="https://cdn1.totalcode.net/easy/product-zoom/es/tornillo-lamina-8-mm-x-3~4%22-avellanado-phillips-zincado-x12und-3.webp"
+                width=60% alt="Imagen">
+              <hr width="100%" size="3" noshade="noshade">
+              <h2>Titulo</h2>
+              <p>Descripcion del articulo</p>
+              <button class="boton-catalogo">Ver más</button>
+            </section>
+          </div>
+          <div class="item">
+            <section class="caja-catalogo">
+              <img
+                src="https://cdn1.totalcode.net/easy/product-zoom/es/tornillo-lamina-8-mm-x-3~4%22-avellanado-phillips-zincado-x12und-3.webp"
+                width=60% alt="Imagen">
+              <hr width="100%" size="3" noshade="noshade">
+              <h2>Titulo</h2>
+              <p>Descripcion del articulo</p>
+              <button class="boton-catalogo">Ver más</button>
+            </section>
+          </div>
+          <div class="item">
+            <section class="caja-catalogo">
+              <img
+                src="https://cdn1.totalcode.net/easy/product-zoom/es/tornillo-lamina-8-mm-x-3~4%22-avellanado-phillips-zincado-x12und-3.webp"
+                width=60% alt="Imagen">
+              <hr width="100%" size="3" noshade="noshade">
+              <h2>Titulo</h2>
+              <p>Descripcion del articulo</p>
+              <button class="boton-catalogo">Ver más</button>
+            </section>
+          </div>
+          <div class="item">
+            <section class="caja-catalogo">
+              <img
+                src="https://cdn1.totalcode.net/easy/product-zoom/es/tornillo-lamina-8-mm-x-3~4%22-avellanado-phillips-zincado-x12und-3.webp"
+                width=60% alt="Imagen">
+              <hr width="100%" size="3" noshade="noshade">
+              <h2>Titulo</h2>
+              <p>Descripcion del articulo</p>
+              <button class="boton-catalogo">Ver más</button>
+            </section>
+          </div>
+          <div class="item">
+            <section class="caja-catalogo">
+              <img
+                src="https://cdn1.totalcode.net/easy/product-zoom/es/tornillo-lamina-8-mm-x-3~4%22-avellanado-phillips-zincado-x12und-3.webp"
+                width=60% alt="Imagen">
+              <hr width="100%" size="3" noshade="noshade">
+              <h2>Titulo</h2>
+              <p>Descripcion del articulo</p>
+              <button class="boton-catalogo">Ver más</button>
+            </section>
+          </div>
+        </div>
 
 <main>
-
-    <article class="caja-articulos">
-      <section class="caja-catalogo">
-        <img src="https://cdn1.totalcode.net/easy/product-zoom/es/tornillo-lamina-8-mm-x-3~4%22-avellanado-phillips-zincado-x12und-3.webp" width=60% alt="Imagen">
-        <hr width="100%" size="3" noshade="noshade">
-        <h2>Titulo</h2>
-        <p>Descripcion del articulo</p>
-        <button class="boton-catalogo">Ver más</button>
-      </section>
-
-      <section class="caja-catalogo">
-        <img src="https://cdn1.totalcode.net/easy/product-zoom/es/tornillo-lamina-8-mm-x-3~4%22-avellanado-phillips-zincado-x12und-3.webp" width=60% alt="Imagen">
-        <hr width="100%" size="3" noshade="noshade">
-        <h2>Titulo</h2>
-        <p>Descripcion del articulo</p>
-        <button class="boton-catalogo">Ver más</button>
-      </section>
-
-      <section class="caja-catalogo">
-        <img src="https://cdn1.totalcode.net/easy/product-zoom/es/tornillo-lamina-8-mm-x-3~4%22-avellanado-phillips-zincado-x12und-3.webp" width=60% alt="Imagen">
-        <hr width="100%" size="3" noshade="noshade">
-        <h2>Titulo</h2>
-        <p>Descripcion del articulo</p>
-        <button class="boton-catalogo">Ver más</button>
-      </section>
-      
-    </article>
     
     <section class="caja-productos-clasificado">
       <div class="caja-producto-unidad">
@@ -154,19 +247,25 @@
 <script>
 var owl = $('.owl-carousel');
 owl.owlCarousel({
-    items:4,
+    items:3,
     loop:true,
     margin:10,
     autoplay:true,
-    autoplayTimeout:1000,
-    autoplayHoverPause:true
+    autoplayTimeout:2000,
+    responsive:{
+        0:{
+            items:2
+        },
+        600:{
+            items:2
+        },
+        1000:{
+            items:4
+        }
+    }
+
 });
-$('.play').on('click',function(){
-    owl.trigger('play.owl.autoplay',[1000])
-})
-$('.stop').on('click',function(){
-    owl.trigger('stop.owl.autoplay')
-})
+
 </script>
 </body>
 </html>
