--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                   <a class="nav-link" href="#">CATÁLOGO</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">COTIZACIÓN</a>
+                    <a class="nav-link" href="index_cotizacion.html">COTIZACIÓN</a>
                   </li>
               </ul>
             </div>
