centrando carrusel catalogo

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             
             </div>
 
-        <div class="owl-carousel owl-theme">
+        <div class="owl-carousel owl-theme caja-carrusel-catalogo">
           <div class="item">
             <section class="caja-catalogo">
               <img
@@ -215,7 +215,7 @@
         </div>
 
 <main>
-    
+    <h1>Mira nuestro catalogo!<h1></h1>
     <section class="caja-productos-clasificado">
       <div class="caja-producto-unidad">
         <img src="" alt="imagenUno">
