--- a/mison.html
+++ b/mison.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class=content-fluid>
-        <h1>Logo</h1>
+        <img src="Imagen/LOGO FINAL.png">
         <nav class="navbar navbar-expand-lg navbar-dark">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
