--- a/mison.html
+++ b/mison.html
@@ -42,6 +42,9 @@
       <div>
           <center>
             <h1 class="titulosPrincipales">MISIÓN</h1>
+            <h6>Brindar soluciones innovadoras y efectivas que satisfagan las necesidades de nuestros clientes 
+                que hacen parte de los diferentes sectores industriales, mediante la comercialización y distribución de tornillería, elementos de fijación y herramientas de calidad. </h6>
+
           </center>
         
         </div>
