--- a/mison.html
+++ b/mison.html
@@ -18,7 +18,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item active ">
-                  <a class="nav-link" href="#">MISIÓN <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="./mison.html">MISIÓN <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">VISIÓN</a>
@@ -27,7 +27,7 @@
                   <a class="nav-link" href="#">CATÁLOGO</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">COTIZACIÓN</a>
+                    <a class="nav-link" href="./index_cotizacion.html">COTIZACIÓN</a>
                   </li>
               </ul>
             </div>
