--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 </head>
 <body>
     <header class=content-fluid>
-        <img src="Imagen/LOGO FINAL.png">
+      <a href="./index.html"><img src="Imagen/LOGO FINAL.png" alt="logo"></a>
+
         <nav class="navbar navbar-expand-lg navbar-dark">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
