--- a/index_cotizacion.html
+++ b/index_cotizacion.html
@@ -10,15 +10,42 @@
 <body>
 
     <header class=content-fluid>
-        <h1>Logo</h1>
-        <center>
-            <h1>DIGIGENCIE LOS SIGUIENTES CAMPOS PARA GENERAR SU COTIZACION</h1>
-            </center>
-            <br/>
-            <br/>
-            <br/>
-            <br/> 
-    </header>
+        <a href="./index.html"><img src="Imagen/LOGO FINAL.png" alt="logo" width="10%"></a>
+          <nav class="navbar navbar-expand-lg navbar-dark">
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item active ">
+                    <a class="nav-link" href="./mison.html">MISIÓN <span class="sr-only">(current)</span></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">VISIÓN</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">CATÁLOGO</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="./index_cotizacion.html">COTIZACIÓN</a>
+                    </li>
+                </ul>
+              </div>
+            </nav>
+  
+      </header>
+
+      <h1>Logo</h1>
+      <center>
+          <h1>DIGIGENCIE LOS SIGUIENTES CAMPOS PARA GENERAR SU COTIZACION</h1>
+          </center>
+          <br/>
+          <br/>
+          <br/>
+          <br/> 
+
+
+
     
     <main>
             
@@ -82,6 +109,11 @@
 
 
     </main>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js" integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous"></script>  
 
 </body>
 </html>
