imagenes agregadas inferior

--- a/index.html
+++ b/index.html
@@ -217,16 +217,16 @@
     <h1>Mira nuestro catalogo!<h1></h1>
     <section class="caja-productos-clasificado">
       <div class="caja-producto-unidad">
-        <img src="" alt="imagenUno">
-        <h2>Titulo</h2>
+        <img src="https://cdn.pixabay.com/photo/2019/03/29/04/35/tools-4088531_960_720.jpg" alt="herramientas" width="80%">
+        <h2>Herramientas</h2>
       </div>
       <div class="caja-producto-unidad">
-        <img src="" alt="ImagenDos">
-        <h2>Titulo</h2>
+        <img src="https://cdn.pixabay.com/photo/2015/03/02/23/22/screws-656724_960_720.jpg" alt="tornilleria" width="80%">
+        <h2>Tornilleria</h2>
       </div>
       <div class="caja-producto-unidad">
-        <img src="" alt="ImagenTres">
-        <h2>titulo</h2>
+        <img src="https://cdn.pixabay.com/photo/2018/10/21/00/06/entrepreneurship-3762064_960_720.jpg" alt="ImagenTres" width="80%">
+        <h2>Otros</h2>
       </div>
     
     </section>
