agregando productos al carrusel catalogo

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 src="https://cdn1.totalcode.net/easy/product-zoom/es/tornillo-lamina-8-mm-x-3~4%22-avellanado-phillips-zincado-x12und-3.webp"
                 width=60% alt="Imagen">
               <hr width="100%" size="3" noshade="noshade">
-              <h2>Arandela</h2>
+              <h2>COPA STANLEY HEX. M1/2 </h2>
               <p>Descripcion del articulo</p>
               <button class="boton-catalogo">Ver más</button>
             </section>
@@ -119,7 +119,7 @@
                 src="https://cdn1.totalcode.net/easy/product-zoom/es/tornillo-lamina-8-mm-x-3~4%22-avellanado-phillips-zincado-x12und-3.webp"
                 width=60% alt="Imagen">
               <hr width="100%" size="3" noshade="noshade">
-              <h2>Tuerca</h2>
+              <h2>LLAVE MIXTA 3/8 STANLEY</h2>
               <p>Descripcion del articulo</p>
               <button class="boton-catalogo">Ver más</button>
             </section>
@@ -130,7 +130,7 @@
                 src="https://cdn1.totalcode.net/easy/product-zoom/es/tornillo-lamina-8-mm-x-3~4%22-avellanado-phillips-zincado-x12und-3.webp"
                 width=60% alt="Imagen">
               <hr width="100%" size="3" noshade="noshade">
-              <h2>Titulo</h2>
+              <h2>Tornillo Hex</h2>
               <p>Descripcion del articulo</p>
               <button class="boton-catalogo">Ver más</button>
             </section>
@@ -141,7 +141,7 @@
                 src="https://cdn1.totalcode.net/easy/product-zoom/es/tornillo-lamina-8-mm-x-3~4%22-avellanado-phillips-zincado-x12und-3.webp"
                 width=60% alt="Imagen">
               <hr width="100%" size="3" noshade="noshade">
-              <h2>Titulo</h2>
+              <h2>Tornillo Drywall</h2>
               <p>Descripcion del articulo</p>
               <button class="boton-catalogo">Ver más</button>
             </section>
@@ -152,7 +152,7 @@
                 src="https://cdn1.totalcode.net/easy/product-zoom/es/tornillo-lamina-8-mm-x-3~4%22-avellanado-phillips-zincado-x12und-3.webp"
                 width=60% alt="Imagen">
               <hr width="100%" size="3" noshade="noshade">
-              <h2>Titulo</h2>
+              <h2>Broca</h2>
               <p>Descripcion del articulo</p>
               <button class="boton-catalogo">Ver más</button>
             </section>
@@ -163,7 +163,7 @@
                 src="https://cdn1.totalcode.net/easy/product-zoom/es/tornillo-lamina-8-mm-x-3~4%22-avellanado-phillips-zincado-x12und-3.webp"
                 width=60% alt="Imagen">
               <hr width="100%" size="3" noshade="noshade">
-              <h2>Titulo</h2>
+              <h2>Arandela Inoxidable</h2>
               <p>Descripcion del articulo</p>
               <button class="boton-catalogo">Ver más</button>
             </section>
@@ -174,7 +174,18 @@
                 src="https://cdn1.totalcode.net/easy/product-zoom/es/tornillo-lamina-8-mm-x-3~4%22-avellanado-phillips-zincado-x12und-3.webp"
                 width=60% alt="Imagen">
               <hr width="100%" size="3" noshade="noshade">
-              <h2>Titulo</h2>
+              <h2> COPA STANLEY</h2>
+              <p>HEX. M1/2  30mm</p>
+              <button class="boton-catalogo">Ver más</button>
+            </section>
+          </div>
+          <div class="item">
+            <section class="caja-catalogo">
+              <img
+                src="https://cdn1.totalcode.net/easy/product-zoom/es/tornillo-lamina-8-mm-x-3~4%22-avellanado-phillips-zincado-x12und-3.webp"
+                width=60% alt="Imagen">
+              <hr width="100%" size="3" noshade="noshade">
+              <h2>FLEXOMETRO 8MT FORTE</h2>
               <p>Descripcion del articulo</p>
               <button class="boton-catalogo">Ver más</button>
             </section>
@@ -185,7 +196,7 @@
                 src="https://cdn1.totalcode.net/easy/product-zoom/es/tornillo-lamina-8-mm-x-3~4%22-avellanado-phillips-zincado-x12und-3.webp"
                 width=60% alt="Imagen">
               <hr width="100%" size="3" noshade="noshade">
-              <h2>Titulo</h2>
+              <h2>LIMA TRIANGULAR ST 4,5</h2>
               <p>Descripcion del articulo</p>
               <button class="boton-catalogo">Ver más</button>
             </section>
@@ -196,18 +207,7 @@
                 src="https://cdn1.totalcode.net/easy/product-zoom/es/tornillo-lamina-8-mm-x-3~4%22-avellanado-phillips-zincado-x12und-3.webp"
                 width=60% alt="Imagen">
               <hr width="100%" size="3" noshade="noshade">
-              <h2>Titulo</h2>
-              <p>Descripcion del articulo</p>
-              <button class="boton-catalogo">Ver más</button>
-            </section>
-          </div>
-          <div class="item">
-            <section class="caja-catalogo">
-              <img
-                src="https://cdn1.totalcode.net/easy/product-zoom/es/tornillo-lamina-8-mm-x-3~4%22-avellanado-phillips-zincado-x12und-3.webp"
-                width=60% alt="Imagen">
-              <hr width="100%" size="3" noshade="noshade">
-              <h2>Titulo</h2>
+              <h2>SIERRA COPA 3/4 MAKITA</h2>
               <p>Descripcion del articulo</p>
               <button class="boton-catalogo">Ver más</button>
             </section>
