--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header class=content-fluid>
-      <a href="./index.html"><img src="Imagen/LOGO FINAL.png" alt="logo"></a>
+      <a href="./index.html"><img src="Imagen/LOGO FINAL.jpeg" alt="logo"></a>
 
         <nav class="navbar navbar-expand-lg navbar-dark">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,10 +26,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item active ">
-                  <a class="nav-link" href="./mison.html">MISIÓN <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="./mison.html">MISIÓN <span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">VISIÓN</a>
+                  <a class="nav-link" href="./vision.html">VISIÓN</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">CATÁLOGO</a>
