--- a/index_cotizacion.html
+++ b/index_cotizacion.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header class=content-fluid>
-        <a href="./index.html"><img src="Imagen/LOGO FINAL.png" alt="logo" width="10%"></a>
+        <a href="./index.html"><img src="Imagen/LOGO FINAL.jpeg" alt="logo" width="10%"></a>
           <nav class="navbar navbar-expand-lg navbar-dark">
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
