--- a/index_cotizacion.html
+++ b/index_cotizacion.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header class=content-fluid>
-        <a href="./index.html"><img src="Imagen/LOGO FINAL.jpeg" alt="logo" width="10%"></a>
+        <a href="./index.html"><img src="Imagen/LOGO FINAL.jpeg" alt="logo"></a>
           <nav class="navbar navbar-expand-lg navbar-dark">
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -21,7 +21,7 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item active ">
-                    <a class="nav-link" href="./mison.html">MISIÓN <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="./mison.html">MISIÓN </a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">VISIÓN</a>
@@ -30,7 +30,7 @@
                     <a class="nav-link" href="#">CATÁLOGO</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="./index_cotizacion.html">COTIZACIÓN</a>
+                    <a class="nav-link" href="./index_cotizacion.html">COTIZACIÓN <span class="sr-only"></span></a>
                     </li>
                 </ul>
               </div>
