estilo al footer

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
         </div>
 
 <main>
-    <h1>Mira nuestro catalogo!<h1></h1>
+    <h1>¡Mira nuestro catalogo!</h1>
     <section class="caja-productos-clasificado">
       <div class="caja-producto-unidad">
         <img src="https://cdn.pixabay.com/photo/2019/03/29/04/35/tools-4088531_960_720.jpg" alt="herramientas" width="80%">
@@ -243,13 +243,28 @@
       <div class="col-sm-6 col-md-3 item">
         <h3>Services</h3>
         <ul>
-            <li><a href="#">Web design</a></li>
-            <li><a href="#">Development</a></li>
-            <li><a href="#">Hosting</a></li>
+          <li><a href="#">Web design</a></li>
+          <li><a href="#">Development</a></li>
+          <li><a href="#">Hosting</a></li>
         </ul>
-    </div>
+      </div>
       <div class="col">
-        Column
+        <ul class="header-info">
+          <li>
+            <i class="fa fa-phone" aria-hidden="true"></i>
+            Llámanos<br />
+            <a href="tel:983%2060%2051%2093">983 60 51 93</a>
+          </li>
+          <li>
+            <i class="fa fa-envelope" aria-hidden="true"></i>Email<br />
+            <a href="mailto:ferreteriajmh@gmail.com">ferreteria@gmail.com</a>
+          </li>
+          <li>
+            <span>
+              <i class="fa fa-clock-o" aria-hidden="true"></i>
+              Horario 08:30-13:00 / 15:00-20:00 </span>
+          </li>
+        </ul>
       </div>
       <div class="col">
         Column
