--- a/mison.html
+++ b/mison.html
@@ -12,6 +12,7 @@
   <link href="/docs/5.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
   <script src="https://kit.fontawesome.com/5c12f6cddc.js" crossorigin="anonymous"></script>
+  
   <title>Document</title>
 </head>
 
@@ -62,21 +63,30 @@
 
 </body>
 
-<footer>
-  <div>
-    <center>
-      <a href="https://www.facebook.com/">
-        <i class="customicon fab fa-facebook"></i>
-      </a>
-      <a href="https://www.instagram.com/">
-        <i class="customicon fab fa-instagram"></i>
-      </a>
-      <a href="https://www.twitter.com/">
-        <i class="customicon fab fa-twitter"></i>
-      </a>
-    </center>
+
+<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+  
+  <div class="col-md-4 d-flex align-items-center">
+    <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+      <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"/></svg>
+    </a>
+    <span class="text-muted">&copy; 2021 MisionTic C3-G08, Inc</span>
   </div>
+
+  <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+    <li class="ms-3"><a class="text-muted" href="https://www.facebook.com/tornillosbautistav"><svg class="bi" width="24" height="24"><a href="https://www.facebook.com/tornillosbautistav.com">
+      <i class="customicon fab fa-facebook"></i></a></svg></a></li>
+    <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><a href="https://www.instagram.com/">
+      <i class="customicon fab fa-instagram"></i>
+  </a></svg></a></li>
+  <li class="ms-3"><a class="text-muted" href="https://api.whatsapp.com/send?phone=573127142360&app=facebook&entry_point=page_cta&fbclid=IwAR1CHff_3j60chbRDAKvNfFnV2itk9SVzU7ASvutmM7dVdjgEXaD7moFKA8.com"><svg class="bi" width="24" height="24"><a href="https://api.whatsapp.com/send?phone=573127142360&app=facebook&entry_point=page_cta&fbclid=IwAR1CHff_3j60chbRDAKvNfFnV2itk9SVzU7ASvutmM7dVdjgEXaD7moFKA8">
+    <i class="customicon fab fa-whatsapp"></i>
+</a></svg></a></li>
+  </ul>
+
+
 </footer>
+
 
 
 
