--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                   <a class="nav-link" href="./vision.html">VISIÓN</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">CATÁLOGO</a>
+                  <a class="nav-link" href="./catalogo.html">CATÁLOGO</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./index_cotizacion.html">COTIZACIÓN</a>
