--- a/catalogo.html
+++ b/catalogo.html
@@ -36,6 +36,7 @@
   </header>
 
 
+    <aside>
   <ul id="submenu_catalogo_categorias_interna" class="10010">
     <li>
       <div class="tornillo_vineta_2_categorias_interna"></div>
@@ -173,8 +174,9 @@
 
   </ul>
 
+</aside>
 
-
+<main>
   <div>
 
     <a href="https://www.mundialdetornillos.com/tornillo-autoperforante" title="TORNILLO AUTOPERFORANTE">
@@ -193,7 +195,7 @@
   </div>
 
 
-
+</main>
 
 
 
