--- a/catalogo.html
+++ b/catalogo.html
@@ -11,6 +11,7 @@
   <header class=content-fluid>
     <a href="./index.html"><img src="Imagen/LOGO FINAL.png" alt="logo"></a>
 
+
     <nav class="navbar navbar-expand-lg navbar-dark">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,6 +35,25 @@
       </div>
     </nav>
   </header>
+
+  <section>
+    <h1>¡Mira nuestro catalogo!</h1>
+    <section class="caja-productos-clasificado">
+      <div class="caja-producto-unidad">
+        <img src="https://cdn.pixabay.com/photo/2019/03/29/04/35/tools-4088531_960_720.jpg" alt="herramientas" width="80%">
+        <h2>Herramientas</h2>
+      </div>
+      <div class="caja-producto-unidad">
+        <img src="https://cdn.pixabay.com/photo/2015/03/02/23/22/screws-656724_960_720.jpg" alt="tornilleria" width="80%">
+        <h2>Tornilleria</h2>
+      </div>
+      <div class="caja-producto-unidad">
+        <img src="https://cdn.pixabay.com/photo/2018/10/21/00/06/entrepreneurship-3762064_960_720.jpg" alt="ImagenTres" width="80%">
+        <h2>Otros</h2>
+      </div>
+    
+    </section>
+  </section>
 
 
     <aside>
